@@ -1,19 +1,27 @@
 package no.nav.aura.basta.rest;
 
-import com.google.common.collect.FluentIterable;
+import java.net.URI;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
+import javax.inject.Inject;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
 import no.nav.aura.basta.domain.SystemNotification;
 import no.nav.aura.basta.repository.SystemNotificationRepository;
 import no.nav.aura.basta.rest.dataobjects.SystemNotificationDO;
-import no.nav.aura.basta.util.SerializableFunction;
+
 import org.jboss.resteasy.annotations.cache.NoCache;
 import org.springframework.stereotype.Component;
-
-import javax.inject.Inject;
-import javax.ws.rs.*;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import java.net.URI;
-import java.util.List;
 
 @Component
 @Path("/system")
@@ -28,7 +36,7 @@ public class SystemRestService {
     @Produces(MediaType.APPLICATION_JSON)
     @NoCache
     public Response getNotification(@PathParam("id") Long id ) {
-        return Response.ok(SystemNotificationDO.fromDomain(systemNotificationRepository.findOne(id))).build();
+        return Response.ok(SystemNotificationDO.from(systemNotificationRepository.findOne(id))).build();
     }
 
     @PUT
@@ -48,13 +56,10 @@ public class SystemRestService {
     @Produces(MediaType.APPLICATION_JSON)
     @NoCache
     public List<SystemNotificationDO> getSystemNotifications() {
-        Iterable<SystemNotification> all = systemNotificationRepository.findAll();
-        return FluentIterable.from(all).transform(new SerializableFunction<SystemNotification, SystemNotificationDO>() {
-            @Override
-            public SystemNotificationDO process(SystemNotification input) {
-                return SystemNotificationDO.fromDomain(input);
-            }
-        }).toList();
+        return StreamSupport.stream(systemNotificationRepository.findAll().spliterator(), false)
+                .map(notification -> SystemNotificationDO.from(notification))
+                .collect(Collectors.toList());
+
     }
 
     @GET
@@ -62,13 +67,9 @@ public class SystemRestService {
     @Produces(MediaType.APPLICATION_JSON)
     @NoCache
     public List<SystemNotificationDO> getActiveSystemNotifications() {
-        Iterable<SystemNotification> all = systemNotificationRepository.findByActiveTrue();
-        return FluentIterable.from(all).transform(new SerializableFunction<SystemNotification, SystemNotificationDO>() {
-            @Override
-            public SystemNotificationDO process(SystemNotification input) {
-                return SystemNotificationDO.fromDomain(input);
-            }
-        }).toList();
+        return StreamSupport.stream(systemNotificationRepository.findByActiveTrue().spliterator(), false)
+                .map(notification -> SystemNotificationDO.from(notification))
+                .collect(Collectors.toList());
     }
 
 
